# appscale-engine

./: .gitignore  AppScale_Engine_README (1).md  AppScale_Engine_README.md  Cargo.toml  LICENSE  README.md  RELEASING.md  USAGE_GUIDE.md  install.sh  plan.md
.github/workflows/: ci.yml  release.yml
Formula/: appscale.rb
cli/: Cargo.toml
cli/src/: build.rs  create.rs  dev.rs  main.rs
ir-schema/: ir.fbs
rust-core/: Cargo.toml
rust-core/benches/: engine_bench.rs
rust-core/src/: accessibility.rs  ai.rs  bridge.rs  cloud.rs  components.rs  devtools.rs  events.rs  ir.rs  layout.rs  lib.rs  modules.rs  navigation.rs  platform.rs  platform_android.rs  platform_ios.rs  platform_macos.rs  platform_web.rs  platform_windows.rs  plugins.rs  scheduler.rs  storage.rs  tree.rs
rust-core/tests/: fuzz_ir.rs  integration.rs
sdk/: jest.config.js  package-lock.json  package.json  tsconfig.json
sdk/src/: bridge.ts  host-config.ts  ir-binary.ts  scheduler.ts  types.ts
sdk/src/__tests__/: bridge.test.ts  scheduler.test.ts  types.test.ts
