[workspace]
resolver = "2"
members = [
    "rust-core",
    "cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Satyam Kumar Das <subham11@gmail.com>"]
repository = "https://github.com/subham11/appscale-engine"
homepage = "https://github.com/subham11/appscale-engine"
keywords = ["cross-platform", "react", "ui-engine", "native", "wasm"]
categories = ["gui", "development-tools"]

[workspace.dependencies]
# Layout engine (Flexbox + CSS Grid)
taffy = "0.6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flatbuffers = "24.3"

# Async runtime (for DevTools server, async modules)
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# FFI (for generating Swift/Kotlin bindings)
# uniffi = "0.28"

# Hash map with better performance
rustc-hash = "2"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
