[package]
name = "appscale-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "AppScale Universal Framework — Rust execution engine"
readme = "../README.md"

[dependencies]
taffy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
flatbuffers = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "engine_bench"
harness = false

[lib]
name = "appscale_core"
crate-type = ["lib", "cdylib", "staticlib"]
